Resolved an issue where the left margin on the contact buttons would cause an unsightly shift at a certain media width.

--- a/css/style.css
+++ b/css/style.css
@@ -37,5 +37,10 @@ body {
 }
 
 .title-text {
- margin-bottom: 3%; 
+  margin-bottom: 3%; 
+}
+@media (min-width: 992px){
+  .custom-offset{
+    margin-left: 12.66666667%;
+  }
 }
